discovery-service/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  namespace: oct-baremetal
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: discovery-service-tls
  labels:
    app: discovery-service
spec:
  type: ClusterIP
  selector:
    app: discovery-service
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
